Alteracao de cor no styles

--- a/frontend/src/componentes/CartaoVendas/styles.css
+++ b/frontend/src/componentes/CartaoVendas/styles.css
@@ -12,7 +12,8 @@
     text-align: center;
 }
 .crmeta-sales-subtitle{
-    color: #ff6767;
+    color: #676fff;
+
 }
 
 .crmeta-form-control-container {
